# sage-py

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Pipfile  README.md  appveyor.yml  requirements.txt  setup.py  test.json
cache/graph/examples/: avatar.jsonld  creative-work.jsonld
cache/graph/jsonld/: tree.jsonld
cache/graph/tripples/: all-layers.nt  ext-health-lifesci.nt  schema.nt
config/: __init__.py  config.h.in  config.hpp.in  config.py  consts.py
config/cpp/: config.hpp.in
example/: graph.py
example/cpp/: graph.cc  hello.cc
example/python/: __init__.py  crawler.py  dtype.py  dummy.py  graph.py  model.py  pos.py  schema.py
example/src/: hello.cc
resources/graph/schema-org/: avatar.jsonld
resources/graph/wikidata/: new-york.jsonld
sage/: CMakeLists.txt  README.md  __init__.py
sage/core/: __init__.py  base.pyi  crawler.pyi  data.pyi  dtype.pyi  graph.pyi  schema.pyi  utils.pyi
sage/core/cython/: __init__.pxd  __init__.py  base.pxd  base.pyx  c_graph.pyd  c_node.pyd  crawler.pyx  graph.pyx  node.pyx  utils.pyx
sage/core/cython/crawler/: __init__.pxd  crawler.pxd  crawler.pyx
sage/core/cython/data/: __init__.pxd  data.pxd  data.pyx  dataset.pyx
sage/core/cython/dtype/: __init__.pxd  dtype.pxd  dtype.pyx
sage/core/cython/graph/: __init__.pxd  graph.pxd  graph.pyx  node.pxd  node.pyx  schema.pxd  schema.pyx
sage/include/: config.h  sage.hpp  sage_pch.cpp  sage_pch.hpp
sage/include/sage/: config.hpp  core.hpp  datatype.hpp  log.hpp
sage/include/sage/dtype/: base.hpp  dtype.hpp  entity.hpp  schema.hpp
sage/include/sage/entity/: entity.hpp
sage/include/sage/error/: error.hpp
sage/include/sage/graph/: entity.hpp  graph.hpp  graph_legacy.hpp  item.hpp  schema.hpp
sage/include/sage/utils/: fs.hpp  init.hpp  log.hpp  mapping.hpp
sage/src/python/: __init__.py  crawler.py  graph.py
sage/src/sage/: datatype.cc  log.cc
sage/src/sage/dtype/: dtype.cc
sage/src/sage/extensions/: sagemodule.cc
sage/src/sage/graph/: graph.cc  graph_legacy.cc  schema.cc
sage/src/sage/utils/: fs.cc  init.cc  log.cc
sage/tests/: test_schema.py
sage/tests/python/: test_graph.py  test_knowledge_graph.py  test_schema.py  test_schema_org.py  test_vertex.py
scripts/: build.sh  clean.sh  cpp.sh  cython.sh  install.sh
